--- a/vuebuild/package.json
+++ b/vuebuild/package.json
@@ -10,8 +10,10 @@
     "build": "cross-env NODE_ENV=production webpack --progress --hide-modules"
   },
   "dependencies": {
+    "bootstrap": "^4.3.1",
+    "bootstrap-vue": "^2.0.0-rc.18",
     "lodash": "^4.17.11",
-    "vue": "^2.5.11"
+    "vue": "^2.6.10"
   },
   "browserslist": [
     "> 1%",
